@@ -1,4 +1,6 @@
-Django>=1.11
+# Note: Specifying django here crashes tox; it's autoinstalled with other packages it
+# so can be removed from this file.
+# django>=1.11
 Pillow>=4.3.0
 django-sortedm2m>=1.5.0 # Need at least 1.4.0 for it to work with Django 1.11.
 ExifRead>=2.1.2
