@@ -1,0 +1,19 @@
+# tox (https://tox.readthedocs.io/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
+[tox]
+envlist =
+    py{27,34,35,36}-django111
+    py{35,36,37}-django21
+
+[testenv]
+deps =
+    django111: django>=1.11,<2.0
+    django21: Django>=2.1,<2.2
+    -r{toxinidir}/example_project/requirements.txt
+changedir =
+    {toxinidir}/example_project/
+commands =
+    python manage.py test photologue
